--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CLIENT_ID=750184011735-fmu4nf5la01vj4mjmkqpt9btiff5h86u.apps.googleusercontent.com
-CLIENT_SECRET=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
+CLIENT_ID = 750184011735-fmu4nf5la01vj4mjmkqpt9btiff5h86u.apps.googleusercontent.com
+CLIENT_SECRET = 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
